syntax = "proto3";

package fleetd.common.v1;

option go_package = "fleetd.sh/gen/common/v1;commonpb";

import "google/protobuf/timestamp.proto";

// Device represents a managed device in the fleet
message Device {
  string id = 1;
  string name = 2;
  string type = 3;                              // raspberry-pi, arduino, esp32, etc.
  string serial_number = 4;
  DeviceStatus status = 5;
  map<string, string> metadata = 6;
  map<string, string> labels = 7;
  google.protobuf.Timestamp last_seen = 8;
  google.protobuf.Timestamp registered_at = 9;

  // Hardware information
  HardwareInfo hardware = 10;

  // Software information
  SoftwareInfo software = 11;

  // Network information
  NetworkInfo network = 12;
}

// DeviceStatus represents the current status of a device
enum DeviceStatus {
  DEVICE_STATUS_UNSPECIFIED = 0;
  DEVICE_STATUS_ONLINE = 1;
  DEVICE_STATUS_OFFLINE = 2;
  DEVICE_STATUS_UPDATING = 3;
  DEVICE_STATUS_ERROR = 4;
  DEVICE_STATUS_MAINTENANCE = 5;
  DEVICE_STATUS_PROVISIONING = 6;
}

// HardwareInfo contains device hardware information
message HardwareInfo {
  string cpu_model = 1;
  int32 cpu_cores = 2;
  int64 memory_bytes = 3;
  int64 storage_bytes = 4;
  string architecture = 5;  // arm64, amd64, etc.
  string board_model = 6;
}

// SoftwareInfo contains device software information
message SoftwareInfo {
  string os_name = 1;
  string os_version = 2;
  string kernel_version = 3;
  string agent_version = 4;
  string firmware_version = 5;
}

// NetworkInfo contains device network information
message NetworkInfo {
  string ip_address = 1;
  string mac_address = 2;
  string hostname = 3;
  repeated NetworkInterface interfaces = 4;
}

// NetworkInterface represents a network interface
message NetworkInterface {
  string name = 1;
  string type = 2;  // ethernet, wifi, cellular
  string ip_address = 3;
  string mac_address = 4;
  bool is_primary = 5;
}